--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,14 +1,17 @@
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+# unbind C-b
+# set-option -g prefix C-a
+# bind-key C-a send-prefix
 set -g status-style 'bg=#333333 fg=#5eacd3'
 
 bind r source-file ~/.tmux.conf
-set -g base-index 1
+# set -g base-index 1
 
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+set-option -g allow-rename off
+set-window-option -g automatic-rename off
 
 # vim-like pane switching
 bind -r k select-pane -U
@@ -23,7 +26,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Continuum automatic restore
-set -g @continuum-restore 'on'
+# set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
 
 # Initialize TMUX plugin manager (KEEP AT VERY BOTTOM)
