--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,9 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+
 set-option -g allow-rename off
 set-window-option -g automatic-rename off
 
