--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,5 +32,8 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 # set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
 
+# Enable mouse mode
+set -g mouse on
+
 # Initialize TMUX plugin manager (KEEP AT VERY BOTTOM)
 run '~/.tmux/plugins/tpm/tpm'
