Switch to p10k for zsh theme

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -104,7 +104,8 @@ window:
 # Font configuration
 font:
   normal:
-    family: SpaceMono Nerd Font Mono
+    family: "MesloLGS NF"
+    #family: SpaceMono Nerd Font Mono
 #font:
   # Normal (roman) font face
   #normal:
