Added statusline + others

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,8 +10,10 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",*256col*:Tc"
+set-option -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ",screen-256color:RGB"
+# set -g default-terminal "xterm-256color"
+# set -ga terminal-overrides ",*256col*:Tc"
 
 set-option -g allow-rename off
 set-window-option -g automatic-rename off
@@ -27,10 +29,15 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 
 # Continuum automatic restore
 # set -g @continuum-restore 'on'
 set -g @resurrect-strategy-nvim 'session'
+
+# sysstat settings
+set -g status-right "#{sysstat_cpu} | #{sysstat_mem} | #{sysstat_swap} | #{sysstat_loadavg} | #[fg=cyan]#(echo $USER)#[default]@#H"
 
 # Enable mouse mode
 set -g mouse on
